# examples

./: .gitignore  LICENSE  Makefile  README.md
button-led/: Makefile  README.md  button_driver.c  deploy.sh  descriptor-local.json  descriptor.json  docker-compose.yml  init_sgx.yaml
button-led-native/: README.md  deploy.sh  descriptor.json  docker-compose.yml  init-webserver.sh  manager.yaml
button-led-no-sancus/: README.md  deploy.sh  descriptor.json  docker-compose.yml  manager-attest.yaml
cosinet-demo/: descriptor.json  docker-compose.yml
cosinet-demo-native/: README.md  cert.der  cert.pem
crypto/: .gitignore
db-webserver/: Makefile  README.md  deploy.sh  descriptor.json  docker-compose.yml
fosdem-21/: complete.json  docker-compose.yml  native.json  sgx.json
fosdem-21-complete/: button_driver.c  descriptor.json  docker-compose.yml
fosdem-21-native/: descriptor.json  docker-compose.yml  manager.yaml
fosdem-21-sgx/: deployer.sh  descriptor.json  docker-compose.yml
module-update/: collect_measurements.py  deploy.sh  descriptor.json  docker-compose.yml  manager.yaml  pong.c  sink.c
module-update-no-sancus/: collect_measurements.py  deploy.sh  descriptor.json  docker-compose.yml  manager.yaml
ping-pong/: .gitignore  README.md
smart-home-native/: Makefile  README.md  deploy.sh  descriptor.json  docker-compose.yml  (+2 more)
supply-chain/receiver/: Cargo.toml
supply-chain/receiver/src/: lib.rs
supply-chain/receiver_1/: Cargo.toml
supply-chain/receiver_1/src/: lib.rs
supply-chain/receiver_2/: Cargo.toml
supply-chain/receiver_2/src/: lib.rs
(+208 files in other folders)
