[package]
name = "receiver_1"
version = "0.1.0"
authors = ["Anonymous Author <anonymous@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
aes-gcm = "0.9.3"
getrandom = { version = "0.2.8", features = ["rdrand"] }